feat: add public groups
